--- a/Essenbee.Z80.Debugger/Generated_ViewModel.tt
+++ b/Essenbee.Z80.Debugger/Generated_ViewModel.tt
@@ -1,6 +1,7 @@
 ﻿using System;
 using System.Collections.ObjectModel;
 using System.ComponentModel;
+using System.Collections.Generic;
 using System.Windows;
 using System.Windows.Input;
 using System.Windows.Threading;
@@ -10,8 +11,8 @@ using System.Windows.Threading;
 
   var properties = new []
     {
-        P ( "string", "ProgramCounter" ),
-        P ( "string", "Memory"         ),
+        P ( "string", "ProgramCounter"               ),
+        P ( "Dictionary<string,string>", "Memory"         ),
     };
 
   var commands = new []
