--- a/Essenbee.Z80.Debugger/Generated_ViewModel.tt
+++ b/Essenbee.Z80.Debugger/Generated_ViewModel.tt
@@ -13,12 +13,15 @@ using System.Windows.Threading;
     {
         P ( "string", "ProgramCounter"               ),
         P ( "Dictionary<string,string>", "Memory"    ),
+        P ( "string", "DisassmFrom"                     ),
+        P ( "string", "DisassmTo"                       ),
     };
 
   var commands = new []
     {
       C ( "StepCommand"         ),
       C ( "LoadCommand"         ),
+      C ( "DisassembleCommand"  ),
     };
 
 #>
