--- a/Essenbee.Z80.Debugger/MainWindow.xaml
+++ b/Essenbee.Z80.Debugger/MainWindow.xaml
@@ -80,6 +80,23 @@
                         Margin="5" 
                         FontWeight="Bold"
                         Command="{Binding LoadCommand}" />
+                <Button x:Name="Disassm" 
+                        Content="Disassemble" 
+                        Width="75" 
+                        Height="25" 
+                        Margin="5" 
+                        FontWeight="Bold"
+                        Command="{Binding DisassembleCommand}" />
+                <Label Content="From:" Margin="2,18"/>
+                <TextBox Width="50"
+                         TextAlignment="Center"
+                         VerticalAlignment="Center"
+                         Text="{Binding DisassmFrom}"/>
+                <Label Content="To:" Margin="2,18"/>
+                <TextBox Width="50"
+                         TextAlignment="Center"
+                         VerticalAlignment="Center"
+                         Text="{Binding DisassmTo}"/>
             </StackPanel>
         </Grid>
 
