--- a/Essenbee.Z80.Debugger/MainWindow.xaml
+++ b/Essenbee.Z80.Debugger/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Essenbee.Z80.Debugger"
+        xmlns:controls="clr-namespace:Essenbee.Z80.Debugger"
         mc:Ignorable="d"
         Title="Z80 Emulator - Debugger" Height="450" Width="800">
     <Grid>
@@ -20,84 +20,10 @@
                 <RowDefinition Height="15*" />
             </Grid.RowDefinitions>
 
-            <DataGrid x:Name="Code" Grid.Row="0" 
-                      VerticalScrollBarVisibility="Visible"
-                      HorizontalScrollBarVisibility="Hidden"
-                      AutoGenerateColumns="False"
-                      IsReadOnly="True"
-                      CanUserAddRows="False"
-                      CanUserDeleteRows="False"
-                      SelectionMode="Single" >
-                <DataGrid.Columns>
-                    <DataGridTextColumn 
-                        Header="Address" 
-                        IsReadOnly="True" 
-                        Width="100" />
-                    <DataGridTextColumn 
-                        Header="Instruction" 
-                        IsReadOnly="True" 
-                        Width="200"/>
-                </DataGrid.Columns>
-            </DataGrid>
-            
-            <!-- Memory Map -->
-            <DataGrid x:Name="MemoryMap" Grid.Row="1" 
-                      VerticalScrollBarVisibility="Visible"
-                      HorizontalScrollBarVisibility="Hidden"
-                      AutoGenerateColumns="False"
-                      ItemsSource="{Binding Memory}" 
-                      IsReadOnly="True"
-                      CanUserAddRows="False"
-                      CanUserDeleteRows="False"
-                      SelectionMode="Single" >
-                <DataGrid.Columns>
-                    <DataGridTextColumn 
-                        Header="Address" 
-                        IsReadOnly="True" 
-                        Width="100" 
-                        Binding="{Binding Path=Key}" />
-                    <DataGridTextColumn 
-                        Header="Contents" 
-                        IsReadOnly="True" 
-                        Width="500"
-                        Binding="{Binding Path=Value}"/>
-                </DataGrid.Columns>
-            </DataGrid>
+            <controls:Disassembler Grid.Row="0" />
+            <controls:MemoryMap Grid.Row="1" />
+            <controls:ControlPanel Grid.Row="2" />
 
-            <!-- Controls and Buttons -->
-            <StackPanel Grid.Row="3" Orientation="Horizontal">
-                <Button x:Name="Step" 
-                        Content="Step" 
-                        Width="50" 
-                        Height="25" 
-                        Margin="10,5,5,5" 
-                        FontWeight="Bold"
-                        Command="{Binding StepCommand}" />
-                <Button x:Name="Load" 
-                        Content="Load" 
-                        Width="50" 
-                        Height="25" 
-                        Margin="5" 
-                        FontWeight="Bold"
-                        Command="{Binding LoadCommand}" />
-                <Button x:Name="Disassm" 
-                        Content="Disassemble" 
-                        Width="75" 
-                        Height="25" 
-                        Margin="5" 
-                        FontWeight="Bold"
-                        Command="{Binding DisassembleCommand}" />
-                <Label Content="From:" Margin="2,18"/>
-                <TextBox Width="50"
-                         TextAlignment="Center"
-                         VerticalAlignment="Center"
-                         Text="{Binding DisassmFrom}"/>
-                <Label Content="To:" Margin="2,18"/>
-                <TextBox Width="50"
-                         TextAlignment="Center"
-                         VerticalAlignment="Center"
-                         Text="{Binding DisassmTo}"/>
-            </StackPanel>
         </Grid>
 
         <!-- Right-hand side -->
@@ -106,19 +32,9 @@
                 <RowDefinition Height="40*" />
                 <RowDefinition Height="60*" />
             </Grid.RowDefinitions>
-            <StackPanel Grid.Row="0" Orientation="Vertical">
-                <StackPanel Orientation="Horizontal">
-                    <Label Content="PC:"
-                           Margin="2,2,0,2"/>
-                    <TextBox x:Name="PC"
-                             Margin="0,2,2,2"
-                             Width="40"
-                             VerticalAlignment="Center"
-                             Text="{Binding ProgramCounter}" />
 
+            <controls:CpuStatus Grid.Row="0" />
 
-                </StackPanel>
-            </StackPanel>
         </Grid>
     </Grid>
     
