--- a/Essenbee.Z80.Debugger/CpuFlags.xaml
+++ b/Essenbee.Z80.Debugger/CpuFlags.xaml
@@ -8,13 +8,15 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <GroupBox Header="Flags"
-                  FontWeight="Bold">
+                  FontWeight="Bold"
+                  Margin="15,0,15,0">
             <StackPanel Orientation="Horizontal" 
                         HorizontalAlignment="Center">
 
             <StackPanel Orientation="Vertical">
                 <Label Content="S"
-                       Margin="4,1,1,0"/>
+                       Margin="4,1,1,0"
+                       FontWeight="Normal"/>
                 <CheckBox x:Name="Bit7"
                          Margin="5,-5,1,1"
                          HorizontalAlignment="Left"
@@ -23,7 +25,8 @@
             </StackPanel>
             <StackPanel Orientation="Vertical">
                 <Label Content="Z"
-                       Margin="4,1,1,0"/>
+                       Margin="4,1,1,0"
+                       FontWeight="Normal"/>
                 <CheckBox x:Name="Bit6"
                          Margin="5,-5,1,1"
                          HorizontalAlignment="Left"
@@ -32,7 +35,8 @@
             </StackPanel>
             <StackPanel Orientation="Vertical">
                 <Label Content="U"
-                       Margin="4,1,1,0"/>
+                       Margin="4,1,1,0"
+                       FontWeight="Normal"/>
                 <CheckBox x:Name="Bit5"
                          Margin="5,-5,1,1"
                          HorizontalAlignment="Left"
@@ -41,7 +45,8 @@
             </StackPanel>
             <StackPanel Orientation="Vertical">
                 <Label Content="H"
-                       Margin="4,1,1,0"/>
+                       Margin="4,1,1,0"
+                       FontWeight="Normal"/>
                 <CheckBox x:Name="Bit4"
                          Margin="5,-5,1,1"
                          HorizontalAlignment="Left"
@@ -50,7 +55,8 @@
             </StackPanel>
             <StackPanel Orientation="Vertical">
                 <Label Content="X"
-                       Margin="4,1,1,0"/>
+                       Margin="4,1,1,0"
+                       FontWeight="Normal"/>
                 <CheckBox x:Name="Bit3"
                          Margin="5,-5,1,1"
                          HorizontalAlignment="Left"
@@ -59,7 +65,8 @@
             </StackPanel>
             <StackPanel Orientation="Vertical">
                 <Label Content="P"
-                       Margin="4,1,1,0"/>
+                       Margin="4,1,1,0"
+                       FontWeight="Normal"/>
                 <CheckBox x:Name="Bit2"
                          Margin="5,-5,1,1"
                          HorizontalAlignment="Left"
@@ -68,7 +75,8 @@
             </StackPanel>
             <StackPanel Orientation="Vertical">
                 <Label Content="N"
-                       Margin="4,1,1,0"/>
+                       Margin="4,1,1,0"
+                       FontWeight="Normal"/>
                 <CheckBox x:Name="Bit1"
                          Margin="5,-5,1,1"
                          HorizontalAlignment="Left"
@@ -78,7 +86,8 @@
 
             <StackPanel Orientation="Vertical">
                 <Label Content="C"
-                       Margin="4,1,1,0"/>
+                       Margin="4,1,1,0"
+                       FontWeight="Normal"/>
                 <CheckBox x:Name="Bit0"
                          Margin="5,-5,1,1"
                          HorizontalAlignment="Left"
