--- a/Essenbee.Z80.Debugger/Generated_ViewModel.tt
+++ b/Essenbee.Z80.Debugger/Generated_ViewModel.tt
@@ -28,7 +28,14 @@ using System.Windows.Threading;
         P ( "string", "BCPairPrime"                  ),
         P ( "string", "DEPair"                       ),
         P ( "string", "DEPairPrime"                  ),
+        P ( "string", "StackPointer"                 ),
+        P ( "string", "IndexX"                       ),
+        P ( "string", "IndexY"                       ),
+        P ( "string", "InterruptVector"              ),
+        P ( "int", "Mode"                            ),
+        P ( "string", "Refresh"                      ),
         P ( "Dictionary<string,string>", "Memory"    ),
+        P ( "int", "MemoryMapRow"                    ),
         P ( "string", "DisassmFrom"                  ),
         P ( "string", "DisassmTo"                    ),
     };
