Added step highlighting to disassembled code

--- a/Essenbee.Z80.Debugger/Disassembler.xaml
+++ b/Essenbee.Z80.Debugger/Disassembler.xaml
@@ -15,7 +15,18 @@
                   IsReadOnly="True"
                   CanUserAddRows="False"
                   CanUserDeleteRows="False"
-                  SelectionMode="Single" >
+                  SelectionMode="Single"
+                  SelectedValuePath="Key"
+                  SelectedValue="{Binding SelectedRow}">
+            <DataGrid.Resources>
+                <Style TargetType="{x:Type DataGridCell}">
+                    <Style.Triggers>
+                        <Trigger Property="DataGridCell.IsSelected" Value="True">
+                            <Setter Property="Background" Value="#CCDAFF" />
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </DataGrid.Resources>
             <DataGrid.Columns>
                 <DataGridTextColumn 
                     Header="Address" 
