Created MSX screen control

--- a/Essenbee.Z80.Debugger/Generated_ViewModel.tt
+++ b/Essenbee.Z80.Debugger/Generated_ViewModel.tt
@@ -11,35 +11,36 @@ using System.Windows.Threading;
 
   var properties = new [] 
     {
-        P ( "string", "ProgramCounter"               ),
-        P ( "bool" , "SignBit"                       ),
-        P ( "bool" , "ZeroBit"                       ),
-        P ( "bool" , "UBit"                          ),
-        P ( "bool" , "HalfCarryBit"                  ),
-        P ( "bool" , "XBit"                          ),
-        P ( "bool" , "ParityOverflowBit"             ),
-        P ( "bool" , "NegationBit"                   ),
-        P ( "bool" , "CarryBit"                      ),
-        P ( "string", "AccuFlags"                    ),
-        P ( "string", "AccuFlagsPrime"               ),
-        P ( "string", "HLPair"                       ),
-        P ( "string", "HLPairPrime"                  ),
-        P ( "string", "BCPair"                       ),
-        P ( "string", "BCPairPrime"                  ),
-        P ( "string", "DEPair"                       ),
-        P ( "string", "DEPairPrime"                  ),
-        P ( "string", "StackPointer"                 ),
-        P ( "string", "IndexX"                       ),
-        P ( "string", "IndexY"                       ),
-        P ( "string", "InterruptVector"              ),
-        P ( "int", "Mode"                            ),
-        P ( "string", "Refresh"                      ),
-        P ( "string", "QRegister"                    ),
-        P ( "string", "MemPointer"                   ),
-        P ( "Dictionary<string,string>", "Memory"    ),
-        P ( "int", "MemoryMapRow"                    ),
-        P ( "Dictionary<string,string>", "DisAsm"    ),
-        P ( "string", "SelectedRow"                  ),
+        P ( "string"                    , "ProgramCounter"        ),
+        P ( "bool"                      , "SignBit"               ),
+        P ( "bool"                      , "ZeroBit"               ),
+        P ( "bool"                      , "UBit"                  ),
+        P ( "bool"                      , "HalfCarryBit"          ),
+        P ( "bool"                      , "XBit"                  ),
+        P ( "bool"                      , "ParityOverflowBit"     ),
+        P ( "bool"                      , "NegationBit"           ),
+        P ( "bool"                      , "CarryBit"              ),
+        P ( "string"                    , "AccuFlags"             ),
+        P ( "string"                    , "AccuFlagsPrime"        ),
+        P ( "string"                    , "HLPair"                ),
+        P ( "string"                    , "HLPairPrime"           ),
+        P ( "string"                    , "BCPair"                ),
+        P ( "string"                    , "BCPairPrime"           ),
+        P ( "string"                    , "DEPair"                ),
+        P ( "string"                    , "DEPairPrime"           ),
+        P ( "string"                    , "StackPointer"          ),
+        P ( "string"                    , "IndexX"                ),
+        P ( "string"                    , "IndexY"                ),
+        P ( "string"                    , "InterruptVector"       ),
+        P ( "int"                       , "Mode"                  ),
+        P ( "string"                    , "Refresh"               ),
+        P ( "string"                    , "QRegister"             ),
+        P ( "string"                    , "MemPointer"            ),
+        P ( "Dictionary<string,string>" , "Memory"                ),
+        P ( "int"                       , "MemoryMapRow"          ),
+        P ( "Dictionary<string,string>" , "DisAsm"                ),
+        P ( "string"                    , "SelectedRow"           ),
+        P ( "IReadOnlyCollection<byte>" , "RawMemory"             ),
     };
 
   var commands = new []
